User System frontend v1

--- a/frontend/src/css/navbarstyles.css
+++ b/frontend/src/css/navbarstyles.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .NavbarItems {
     display: flex;
     justify-content: space-between;
