--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,7 @@
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Geologica&display=swap');
 
 body {
   margin: 0;
@@ -11,7 +12,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
