--- a/frontend/src/components/userfrontend/applytailwind.css
+++ b/frontend/src/components/userfrontend/applytailwind.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -110,4 +110,4 @@ form input[type="submit"] {
 
 .seperateForms {
     padding: 15px
-}
+} */
